--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/majorLogo.webp" />
+    <link rel="icon" type="image/svg+xml" href="./DDA.JPG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MajoreG</title>
+    <title>DialDeutschAssociation</title>
   </head>
   <body>
     <div id="root"></div>
